<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiveChess</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="new_game">Computer Five Chess</string>
    <string name="fight">Three Chess</string>
    <string name="fight_connection">Network Five Chess</string>
    <string name="Role_black">Black Player</string>
    <string name="Role_white">White Player</string>
    <string name="agree">Agree</string>
    <string name="reject">Reject</string>
    <string name="fight_request">ask for fight with you</string>
    <string name="connections">Connections</string>
    <string name="chat_send">Send</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="restart">New Game</string>
    <string name="rollback">Rollback</string>
    <string name="about">about</string>
    <string name="exit">Exit</string>
    <string name="equal">Equal</string>
    <string name="fail">Fail</string>
    <string name="myself">Me</string>
    <string name="challenger">Challenger</string>
    <string name="computer">Computer</string>
    <string name="setting">Setting</string>
    <string name="ok">OK</string>
    <string name="Continue">Continue</string>
    
    <string name="three_chess_computer">With Computer</string>
    <string name="three_chess_bluetooth">BlueTooth PK</string>
    <string name="three_chess_myself">Have Fun</string>
    
<!--     蓝牙设备 -->
    <string name="select_device">Select_device</string>
    <string name="title_paired_devices">历史匹配设备</string>
    <string name="title_other_devices">当前可匹配设备</string>
    <string name="button_scan">扫描</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
</resources>
