<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        
        <Button
            android:id="@+id/fight_computer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onClick"
            android:text="@string/three_chess_computer"
            android:background="@drawable/btn_bg" />
    
        <Button
            android:id="@+id/fight_myself"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
             android:onClick="onClick"
            android:text="@string/three_chess_myself"
            android:background="@drawable/btn_bg" />
        
        <Button
            android:id="@+id/fight_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
             android:onClick="onClick"
            android:text="@string/three_chess_bluetooth"
            android:background="@drawable/btn_bg" /> 

    </LinearLayout>
</RelativeLayout>